     - ``SessionOptions.DefaultMaxCommitTime``, ``SessionOptions.SetDefaultMaxCommitTime()``
     - ``TransactionOptions.MaxCommitTime``, ``TransactionOptions.SetMaxCommitTime()``
     - ``WriteConcern.WTimeout``

     Instead, you can set a timeout on your client or within a Context.
     Learn more in the :ref:`golang-timeout-setting` section of the
     Connection Options guide.

This release includes the following improvements and fixes:

- Support for OpenID Connect (OIDC) authentication. To learn more, see
  the :ref:`golang-mongodb-oidc` section of the Enterprise
  Authentication Mechanisms guide.

- You can access the GridFS API from the ``mongo`` package. In previous
  versions, you could access GridFS functions from the separate ``gridfs``
  package, but this functionality is now merged with the main driver
  ``mongo`` package. To learn more, see the :ref:`golang-gridfs` guide.

- The ``Comment`` field in any options struct takes a value of type ``any`` instead of type
  ``string``. To set this field, you can use the ``SetComment()`` method and pass a parameter
  of type ``any``.

- Updates to monitoring event documents:

  - The ``CommandStartedEvent`` and ``CommandFinishedEvent`` structs
    have a single ``ServerConnectionID`` field of type ``int64`` to
    capture the connection ID.
    
  - The ``ConnectionID`` field of the ``PoolEvent``
    struct takes a value of type ``int64`` instead of ``uint64``.

  To view sample event documents, see the :ref:`golang-monitoring` guides.

- The ``Session`` interface is converted to a struct. See the
  :ref:`golang-transactions` guide to learn more.

- The ``Distinct()`` method returns a struct that can be decoded into a
  specified type. See the :ref:`golang-retrieve-distinct` guide to learn more.

- The ``IndexView.DropOne()`` method returns only an error, if present. In
  previous versions, this method also returned the server response, which
  contained the number of dropped indexes. See the